fix spacing on #4

--- a/slides/css/main.css
+++ b/slides/css/main.css
@@ -939,3 +939,12 @@ html {
 
 
 
+#geordi {
+  float: left;
+  width: 25%;
+}
+#geordi + ul {
+  display: block;
+  margin-top: 30px;
+  margin-left: 35%;
+}
